[package]
name = "spann-py"
version = "0.2.0"
edition = "2024"
publish = false

[lib]
name = "spann"
crate-type = ["cdylib"]

[dependencies]
half = "2.7.1"
ndarray = "0.17.1"
pyo3 = { version = "0.23.4", features = ["abi3-py310", "extension-module"] }
spann = { version = "0.2.0" }

[profile.release]
opt-level = 3       # Maximize optimizations (default is 3, but explicit is good)
lto = "fat"         # Enable Link Time Optimization (cross-crate optimization)
codegen-units = 1   # Reduce parallel code generation to allow better optimization passes
panic = "abort"     # Crash on panic immediately (removes unwinding overhead)
strip = true        # Strip symbols from binary (reduces size, slightly faster load)
